--- a/api/order-service/docker/kafka-kraft-single-broker/docker-compose-file-confluentic/docker-compose.yml
+++ b/api/order-service/docker/kafka-kraft-single-broker/docker-compose-file-confluentic/docker-compose.yml
@@ -1,47 +1,86 @@
----
-version: '3'
-volumes:
-  volume1:
-  volume2:
-  volume3:
+version: '3.8'
+
 networks:
   kafka-network:
     driver: bridge
+
 services:
-  broker:
+
+  broker1:
     image: confluentinc/confluent-local:7.4.1
-    hostname: broker
-    container_name: broker
+    hostname: broker1
+    container_name: broker1
+    networks:
+      - kafka-network
     ports:
-      - "8082:8082"
       - "9092:9092"
-      - "9101:9101"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092'
-      KAFKA_CONTROLLER_QUORUM_VOTERS: '1@broker:29093'
-      KAFKA_LISTENERS: 'PLAINTEXT://broker:29092,CONTROLLER://broker:29093,PLAINTEXT_HOST://0.0.0.0:9092'
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "false"  # Disable auto topic creation
+      KAFKA_NODE_ID: 1
+      KAFKA_CLUSTER_ID: XBz0K8-fSc-NYPWzx22vLQ
+      KAFKA_PROCESS_ROLES: broker,controller
+
+      KAFKA_LISTENERS: INTERNAL://broker1:29092,EXTERNAL://0.0.0.0:9092,CONTROLLER://broker1:29093
+
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://broker1:29092,EXTERNAL://localhost:9092
+
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@broker1:29093,2@broker2:29094
+
+      #KAFKA_AUTO_CREATE_TOPICS_ENABLE: "false"
+
+  broker2:
+    image: confluentinc/confluent-local:7.4.1
+    hostname: broker2
+    container_name: broker2
+    networks:
+      - kafka-network
+    ports:
+      - "9093:9093"
+    environment:
+      KAFKA_NODE_ID: 2
+      KAFKA_CLUSTER_ID: XBz0K8-fSc-NYPWzx22vLQ
+      KAFKA_PROCESS_ROLES: broker,controller
+
+      KAFKA_LISTENERS: INTERNAL://broker2:29092,EXTERNAL://0.0.0.0:9093,CONTROLLER://broker2:29094
+
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://broker2:29092,EXTERNAL://localhost:9093
+
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@broker1:29093,2@broker2:29094
+
+      #KAFKA_AUTO_CREATE_TOPICS_ENABLE: "false"
 
   schema-registry:
-    image: confluentinc/cp-schema-registry
+    image: confluentinc/cp-schema-registry:7.4.1
     container_name: schema-registry
     hostname: schema-registry
+    networks:
+      - kafka-network
     ports:
       - "9021:9021"
     environment:
-      SCHEMA_REGISTRY_HOST_NAME: 192.168.0.143
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://broker:9092,PLAINTEXT_INTERNAL://localhost:9092
-      SCHEMA_REGISTRY_LISTENERS: 'http://0.0.0.0:9021'
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
+      SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:9021
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://broker1:29092,PLAINTEXT://broker2:29092
     depends_on:
-      - broker
-    networks:
-      - kafka-network
+      - broker1
+      - broker2
 
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    networks:
+      - kafka-network
     ports:
       - 9999:8080
     environment:
-      DYNAMIC_CONFIG_ENABLED: true
+      DYNAMIC_CONFIG_ENABLED: "true"
       KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: broker:29092
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: broker1:29092,broker2:29092
+      KAFKA_CLUSTERS_0_SCHEMAREGISTRY: http://schema-registry:9021
