--- a/api/order-service/src/main/resources/application-dev.yml
+++ b/api/order-service/src/main/resources/application-dev.yml
@@ -20,6 +20,19 @@ eureka:
 resilience4j:
   circuitbreaker:
     configs:
+      kafkaProducer:
+        failureRateThreshold: 50
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+        waitDurationInOpenState: 30s
+        permittedNumberOfCallsInHalfOpenState: 3
+        recordExceptions:
+          - org.apache.kafka.common.errors.TimeoutException
+          - org.apache.kafka.common.errors.NetworkException
+          - org.apache.kafka.common.errors.UnknownTopicOrPartitionException
+          - org.apache.kafka.common.errors.NotLeaderForPartitionException
+          - java.util.concurrent.ExecutionException
+          - java.lang.RuntimeException
       myCircuitBreaker:
         registerHealthIndicator: true
         slidingWindowSize: 5 # slidingWindowSize: Determines how many calls are monitored to calculate the failure rate.
@@ -37,6 +50,9 @@ resilience4j:
         permittedNumberOfCallsInHalfOpenState: 2
         waitDurationInOpenState: 2s
         automaticTransitionFromOpenToHalfOpenEnabled: true
+    instances:
+      kafkaProducerCircuitBreaker:
+        baseConfig: kafkaProducer
   #timeout properties - maximum time that a particular operation is allowed to execute
   timelimiter:
     configs:
@@ -72,15 +88,16 @@ spring:
   autoconfigure:
     exclude: org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
   kafka:
-    bootstrap-servers: localhost:9092
-    registry:
-      url: http://192.168.0.143:9021
+    properties:
+      schema.registry.url: http://192.168.0.143:9021
+    bootstrap-servers: localhost:9092,localhost:9093
     producer:
       acks: all
+      linger-ms: 0
       properties:
         enable:
           idempotence: true
-      transaction-id-prefix: tx-
+      #transaction-id-prefix: tx-
 
   # First start MYSQL DB instance on your local server - located at windows/system services
   datasource:
