--- a/api/api-gateway-service/src/main/resources/application-dev.yml
+++ b/api/api-gateway-service/src/main/resources/application-dev.yml
@@ -11,6 +11,14 @@ logging:
     org.springframework.cloud.gateway: DEBUG
     reactor.netty: DEBUG
 
+# api-gateway application.yml
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    urls:
+      - name: hello-world-service
+        url: /api/hello-world-service/v3/api-docs
+
 spring:
   #webflux:
   #  base-path: /api-gateway
@@ -24,18 +32,34 @@ spring:
   cloud:
     gateway:
       globalcors:
+        add-to-simple-url-handler-mapping: true
         corsConfigurations:
           '[/**]':
-            allowedOrigins: "*"
-            allowedMethods: "*"
+            allowedOrigins: "http://localhost:8081"
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+              - OPTIONS
             allowedHeaders: "*"
+            allowCredentials: true
       routes:
+        - id: hello-world-service-swagger
+          predicates:
+            - Path=/api/hello-world-service/v3/api-docs
+          uri: http://localhost:8088
+          #filters:
+          #  - StripPrefix=1
+        - id: hello-world-service
+          predicates:
+            - Path=/api/hello-world-service/**
+          uri: http://localhost:8088
         - id: order-service
           predicates:
-            - Path=/api-gateway/api/v1/orders/**        # match downstream path
+            - Path=/api/v1/orders/**        # match downstream path
           uri: http://localhost:8089
           filters:
-            - StripPrefix=1                # keep /api/v1/orders in forwarded request
             - name: RequestRateLimiter
               args:
                 redis-rate-limiter:
@@ -46,8 +70,7 @@ spring:
         - id: payment-service
           predicates:
             - Path=/api-gateway/api/v1/payment/**
-          uri: https://localhost:8088
-
+          uri: https://localhost:8082
 
 # Spring Boot Actuator configurations
 management:
