--- a/api/payment-service/src/main/resources/application-dev.yml
+++ b/api/payment-service/src/main/resources/application-dev.yml
@@ -1,7 +1,8 @@
 server:
-  port: 8088
+  port: 8082
   servlet:
-    contextPath: /payment-service/api/payment
+    #contextPath: /payment-service/api/payment
+    contextPath: /api/v1/payment
  # This spring boot configuration enforce HTTPS and encrypted communication.
  # encrypt data between servers and users
   ssl:
