--- a/api/payment-service/pom.xml
+++ b/api/payment-service/pom.xml
@@ -89,6 +89,10 @@
             <artifactId>spring-boot-starter-webflux</artifactId>
             <version>3.4.6</version>
         </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
