--- a/api/order-service/docker/kafka-kraft-single-broker/docker-compose-file-confluentic/docker-compose.yml
+++ b/api/order-service/docker/kafka-kraft-single-broker/docker-compose-file-confluentic/docker-compose.yml
@@ -8,53 +8,51 @@ services:
 
   broker1:
     image: confluentinc/confluent-local:7.4.1
-    hostname: broker1
     container_name: broker1
+    hostname: broker1
     networks:
       - kafka-network
     ports:
-      - "9092:9092"
+      - "9092:9092"     # host → broker1
+      - "29093:29093"   # controller
     environment:
       KAFKA_NODE_ID: 1
       KAFKA_CLUSTER_ID: XBz0K8-fSc-NYPWzx22vLQ
       KAFKA_PROCESS_ROLES: broker,controller
 
-      KAFKA_LISTENERS: INTERNAL://broker1:29092,EXTERNAL://0.0.0.0:9092,CONTROLLER://broker1:29093
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:29092,PLAINTEXT_HOST://0.0.0.0:9092,CONTROLLER://0.0.0.0:29093
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker1:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT,CONTROLLER:PLAINTEXT
 
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://broker1:29092,EXTERNAL://localhost:9092
 
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
 
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@broker1:29093,2@broker2:29094
 
-      #KAFKA_AUTO_CREATE_TOPICS_ENABLE: "false"
-
   broker2:
     image: confluentinc/confluent-local:7.4.1
-    hostname: broker2
     container_name: broker2
+    hostname: broker2
     networks:
       - kafka-network
     ports:
-      - "9093:9093"
+      - "9093:9093"     # host → broker2 (DIFFERENT PORT!)
+      - "29094:29094"
     environment:
       KAFKA_NODE_ID: 2
       KAFKA_CLUSTER_ID: XBz0K8-fSc-NYPWzx22vLQ
       KAFKA_PROCESS_ROLES: broker,controller
 
-      KAFKA_LISTENERS: INTERNAL://broker2:29092,EXTERNAL://0.0.0.0:9093,CONTROLLER://broker2:29094
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:29092,PLAINTEXT_HOST://0.0.0.0:9093,CONTROLLER://0.0.0.0:29094
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker2:29092,PLAINTEXT_HOST://localhost:9093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT,CONTROLLER:PLAINTEXT
 
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://broker2:29092,EXTERNAL://localhost:9093
 
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
 
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@broker1:29093,2@broker2:29094
-
-      #KAFKA_AUTO_CREATE_TOPICS_ENABLE: "false"
 
   schema-registry:
     image: confluentinc/cp-schema-registry:7.4.1
@@ -78,9 +76,11 @@ services:
     networks:
       - kafka-network
     ports:
-      - 9999:8080
+      - "9999:8080"
     environment:
-      DYNAMIC_CONFIG_ENABLED: "true"
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: broker1:29092,broker2:29092
       KAFKA_CLUSTERS_0_SCHEMAREGISTRY: http://schema-registry:9021
+    depends_on:
+      - broker1
+      - broker2
