--- a/api/payment-gateway-service-external/src/main/resources/application-dev.yml
+++ b/api/payment-gateway-service-external/src/main/resources/application-dev.yml
@@ -97,7 +97,8 @@ spring:
   kafka:
     properties:
       schema.registry.url: http://192.168.0.143:9021
-    bootstrap-servers: localhost:9092,localhost:9093
+    #bootstrap-servers: localhost:9092,localhost:9093
+    bootstrap-servers: kafka:9092,kafka:9093
     producer:
       acks: all
       linger-ms: 0
